# semantic-web-lsp

./: .gitignore  .gitmodules  .taplo.toml  Cargo.toml  LICENSE  Makefile.toml  README.md  app.bundle.js  flake.nix  index.html  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  main.yml  release.yml
assets/css/: main.css
conformance/: Cargo.toml  build.rs
conformance/src/: lib.rs
core/: Cargo.toml
core/src/: backend.rs  client.rs  components.rs  lang.rs  lib.rs  model.rs  ns.rs  prefix.rs  prelude.rs  semantics.rs  systems.rs  token.rs  triples.rs  utils.rs
core/src/feature/: completion.rs  diagnostics.rs  format.rs  goto_definition.rs  goto_implementation.rs  goto_type.rs  hover.rs  inlay.rs  mod.rs  parse.rs  references.rs  rename.rs  save.rs  semantic.rs
core/src/features/completion/: completion.rs  mod.rs
core/src/features/diagnostic/: mod.rs  systems.rs
core/src/systems/: diagnostics.rs  jsonld.json  links.rs  lov.rs  mod.rs  prefix.rs  properties.rs  semantics.rs  shapes.rs  typed.rs
core/src/util/: cache.rs  fs.rs  mod.rs  token.rs  triple.rs
core/src/utils/: mod.rs
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/ahash/: all.html  index.html  struct.AHashMap.html  struct.AHashSet.html  struct.AHasher.html  trait.HashMapExt.html  trait.HashSetExt.html  type.HashMap.html  type.HashSet.html
docs/async_executor/: all.html  index.html  struct.Executor.html  struct.LocalExecutor.html
docs/async_global_executor/: all.html  fn.block_on.html  fn.init.html  fn.init_with_config.html  fn.spawn.html  fn.spawn_blocking.html  fn.spawn_local.html  fn.spawn_more_threads.html  fn.stop_current_thread.html  fn.stop_thread.html  index.html  struct.GlobalExecutorConfig.html  struct.Task.html
docs/async_io/: all.html  fn.block_on.html  index.html  struct.Async.html  struct.Readable.html  struct.ReadableOwned.html  struct.Timer.html  struct.Writable.html  struct.WritableOwned.html  trait.IoSafe.html
docs/async_std/: all.html  index.html  macro.task_local.html
docs/async_trait/: all.html  attr.async_trait.html  index.html
docs/auto_impl/: all.html  attr.auto_impl.html  index.html
docs/beef/: all.html  index.html  type.Cow.html
docs/bevy_ecs/: all.html  index.html  macro.define_label.html  sidebar-items.js
docs/bevy_ecs_macros/: all.html  derive.Bundle.html  derive.Component.html  derive.Event.html  derive.QueryData.html  derive.QueryFilter.html  derive.Resource.html  derive.ScheduleLabel.html  derive.States.html  derive.SubStates.html  derive.SystemParam.html  derive.SystemSet.html  index.html  macro.impl_param_set.html
docs/bevy_macro_utils/: all.html  fn.derive_label.html  fn.ensure_no_collision.html  fn.get_lit_bool.html  fn.get_lit_str.html  fn.get_struct_fields.html  index.html  struct.BevyManifest.html  struct.Symbol.html
docs/bevy_ptr/: all.html  fn.dangling_with_align.html  index.html  struct.Aligned.html  struct.ConstNonNull.html  struct.OwningPtr.html  struct.Ptr.html  struct.PtrMut.html  struct.ThinSlicePtr.html  struct.Unaligned.html  trait.IsAligned.html  trait.UnsafeCellDeref.html
docs/bevy_tasks/: all.html  fn.available_parallelism.html  fn.block_on.html  fn.poll_once.html  fn.tick_global_task_pools_on_main_thread.html  index.html  struct.AsyncComputeTaskPool.html  struct.ComputeTaskPool.html  struct.IoTaskPool.html  struct.Scope.html  struct.Task.html  struct.TaskPool.html  struct.TaskPoolBuilder.html  struct.ThreadExecutor.html  struct.ThreadExecutorTicker.html  trait.ParallelIterator.html  trait.ParallelSlice.html  trait.ParallelSliceMut.html
docs/bevy_utils/: all.html  enum.CowArc.html  fn.dbg.html  fn.default.html  fn.error.html  fn.get_short_name.html  fn.info.html  fn.warn.html  index.html  macro.all_tuples.html  macro.all_tuples_with_size.html  macro.debug_once.html  macro.detailed_trace.html  macro.error_once.html  macro.info_once.html  macro.once.html  macro.trace_once.html  macro.warn_once.html  struct.AHasher.html  struct.Duration.html  struct.EntityHash.html  struct.EntityHasher.html  struct.FixedState.html  struct.Hashed.html  struct.Instant.html  (+22 more)
examples/: context.jsonld  index.jsonld  query.sq
jetbrains/: build.gradle.kts  kls_database.db  settings.gradle.kts
lang-jsonld/: Cargo.toml
lang-jsonld/src/: contexts.rs  lib.rs  loader.rs  parser.rs  tokenizer.rs  triples.rs
lang-jsonld/src/ecs/: highlight.rs  mod.rs  parse.rs
lang-jsonld/src/lang/: mod.rs  parser.rs  tokenizer.rs  triples.rs
lang-jsonld/src/systems/: highlight.rs  mod.rs  parse.rs
lang-sparql/: Cargo.toml
lang-sparql/src/: keywords.rs  lib.rs  model.rs  parsing.rs  tokenizer.rs
lang-sparql/src/ecs/: mod.rs
lang-sparql/src/lang/: mod.rs  model.rs  parsing.rs  tokenizer.rs
lang-sparql/src/systems/: mod.rs
lang-turtle/: Cargo.toml
lang-turtle/src/: formatter.rs  lib.rs  model.rs  node.rs  parser.rs  parser2.rs  shacl.rs  testing.rs  token.rs  tokenizer.rs  utils.rs
lang-turtle/src/completion/: namespace.rs  shape.rs
lang-turtle/src/ecs/: completion.rs  format.rs  mod.rs  parse.rs
lang-turtle/src/green/: property.rs
lang-turtle/src/lang/: context.rs  formatter.rs  mod.rs  model.rs  model2.rs  parser.rs  parser2.rs  tokenizer.rs
lang-turtle/src/systems/: formatting.rs  lov.rs  mod.rs  parsing.rs
lang-turtle/src/systems/completion/: mod.rs  prefix.rs  subject.rs  tests.rs
lov/: Cargo.toml  README.md  package-lock.json  package.json  script.js
lsp-bin/: Cargo.toml
lsp-bin/src/: backend.rs  client.rs  lib.rs  main.rs  timings.rs
lsp-web/: .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.json
lsp-web/src/: client.rs  fetch.rs  lib.rs  web_types.rs
nix-support/: cargo-artifacts.nix  common-arguments.nix  workspace-member-package.nix
src/: backend.rs  lib.rs  semantics.rs
swls/: Cargo.toml
test-conformance/: Cargo.toml  build.rs
test-conformance/src/: lib.rs  main.rs
test-conformance/tests/: generated.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
token-helpers/: Cargo.toml
token-helpers/src/: helpers.rs
web/: Cargo.toml
(+36125 files in other folders)
