[workspace.dependencies]
async-trait  = "0.1.68"
chumsky      = "0.9.0"
enum-methods = "0.0.8"
futures      = "0.3.27"
hashbrown    = "0.13.2"
lsp-types    = "0.94.0"
ropey        = "1.5.0"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0.96"
sophia_api   = "0.8.0"
sophia_iri   = "0.8.0"
tokio        = { version = "1.33.0", features = ["full"] }
tower-lsp    = "0.19.0"
tracing      = "0.1.37"

[profile.release]
debug = true

[workspace]
default-members = ["core", "lang-turtle", "lang-jsonld", "lsp-bin"]
members         = ["core", "lsp-web", "lang-turtle", "lang-jsonld", "lsp-bin"]
resolver        = "2"
