
[package]
name = "lsp-core"

authors = ["Arthur Vercruysse <arthur.vercruysse@outlook.com>"]
edition = "2021"
version = "0.1.0"

[dependencies]
bevy_ecs.workspace     = true
chumsky.workspace      = true
derive_more.workspace  = true
enum-methods.workspace = true
futures.workspace      = true
lsp-types.workspace    = true
ropey.workspace        = true
serde_json.workspace   = true
sophia_api.workspace   = true
tower-lsp.workspace    = true
tracing.workspace      = true
