
[package]
name = "lsp-core"

authors = ["Arthur Vercruysse <arthur.vercruysse@outlook.com>"]
edition = "2021"
version = "0.1.0"

[dependencies]
bevy_ecs.workspace     = true
chumsky.workspace      = true
derive_more.workspace  = true
enum-methods.workspace = true
futures.workspace      = true
hashbrown.workspace    = true
lsp-types.workspace    = true
ropey.workspace        = true
serde.workspace        = true
serde_json.workspace   = true
sophia_api.workspace   = true
tower-lsp.workspace    = true
tracing.workspace      = true

casey = "0.4.0"
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
lazy_static = "1.5.0"
lov = { path = "../lov/" }
rudof_lib = { git = "https://github.com/ajuvercr/rudof.git", default-features = false, features = [
] }
