[package]
name = "lang-jsonld"
version = "0.1.0"    # the current version, obeying semver
edition = "2021"     # the edition, will have no effect on a resolver used in the workspace
authors = ["Arthur Vercruysse <arthur.vercruysse@outlook.com>"]

[dependencies]
enum-methods.workspace = true
sophia_api.workspace = true
sophia_iri.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
chumsky.workspace = true
ropey.workspace = true
lsp-types.workspace = true
futures.workspace = true
tower-lsp.workspace = true
hashbrown.workspace = true
async-trait.workspace = true

iref = "2.2.3"
locspan = "0.7.13"
json-ld = { version = "0.14" }
json-ld-syntax = "0.14.0"
json-syntax = "0.9.1"
rdf-types = "0.14.2"
mime = "0.3.16"
once_cell = "1.17.1"
bytes = "1.4.0"

lsp-core = {path = "../core/"}
