[package]
name = "lang-turtle"

authors = ["Arthur Vercruysse <arthur.vercruysse@outlook.com>"]
edition = "2021"
version = "0.1.0"

[dependencies]
async-trait.workspace  = true
bevy_ecs.workspace     = true
bevy_tasks.workspace   = true
chumsky.workspace      = true
enum-methods.workspace = true
futures.workspace      = true
hashbrown.workspace    = true
lsp-types.workspace    = true
ropey.workspace        = true
serde_json.workspace   = true
sophia_api.workspace   = true
sophia_iri.workspace   = true
tower-lsp.workspace    = true
tracing.workspace      = true

lsp-core = { path = "../core/" }


[dev-dependencies]
async-executor = "1.13.1"
async-std          = "1.13.0"
