[package]
name = "lang-turtle"

authors = ["Arthur Vercruysse <arthur.vercruysse@outlook.com>"]
edition = "2021"
version = "0.1.0"

[dependencies]
async-trait.workspace  = true
bevy_ecs.workspace     = true
bevy_tasks.workspace   = true
chrono                 = { version = "0.4.38", default-features = false, features = ["serde"] }
chumsky.workspace      = true
enum-methods.workspace = true
futures.workspace      = true
hashbrown.workspace    = true
lsp-types.workspace    = true
ropey.workspace        = true
serde.workspace        = true
serde_json.workspace   = true
sophia_api.workspace   = true
sophia_iri.workspace   = true
tower-lsp.workspace    = true
tracing.workspace      = true

lsp-core = { path = "../core/" }

[dev-dependencies]
test-utils = { path = "../test-utils/" }
test-log = { version = "0.2.16", features = ["trace"]}
