[package]
name = "lang-turtle"

authors = ["Arthur Vercruysse <arthur.vercruysse@outlook.com>"]
edition = "2021"
version = "0.1.0"

[dependencies]
async-trait.workspace  = true
bevy_ecs.workspace     = true
bevy_tasks.workspace   = true
chumsky.workspace      = true
enum-methods.workspace = true
futures.workspace      = true
lsp-types.workspace    = true
logos.workspace    = true
ropey.workspace        = true
serde.workspace        = true
serde_json.workspace   = true
sophia_api.workspace   = true
sophia_iri.workspace   = true
tracing.workspace      = true

lov      = { path = "../lov/" }
token-helpers      = { path = "../token-helpers/" }
lsp-core = { path = "../core/" }

[dev-dependencies]
test-log   = { version = "0.2.16", features = ["trace"] }
test-utils = { path = "../test-utils/" }
