[package]
name = "lsp-bin"

edition = "2021"
version = "0.1.0"

[dependencies]
async-trait.workspace  = true
bevy_ecs.workspace     = true
chumsky.workspace      = true
enum-methods.workspace = true
futures.workspace      = true
hashbrown.workspace    = true
lsp-types.workspace    = true
reqwest.workspace      = true
ropey.workspace        = true
serde_json.workspace   = true
sophia_api.workspace   = true
sophia_iri.workspace   = true
tower-lsp.workspace    = true
tracing.workspace      = true

lang-jsonld = { path = "../lang-jsonld/" }
lang-sparql = { path = "../lang-sparql/" }
lang-turtle = { path = "../lang-turtle/" }
lsp-core    = { path = "../core/" }

tokio = { version = "1.33.0", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["json"] }
