
[package]
name = "lsp-web"
version = "0.1.0"    # the current version, obeying semver
edition = "2021"     # the edition, will have no effect on a resolver used in the workspace
authors = ["Arthur Vercruysse <arthur.vercruysse@outlook.com>"]


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lsp-core = {path = "../core/"}
lsp-bin = {path="../lsp-bin/"}
lang-turtle = {path="../lang-turtle"}
lang-jsonld = {path="../lang-jsonld"}

console_error_panic_hook = "0.1.7"
tracing-wasm =  {version = "0.2.1"}
wasm-bindgen = { version = "0.2.86", features = ["serde", "serde-serialize", "serde_json"] }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen-futures = "0.4.34"
js-sys = "0.3.63"

serde.workspace = true
serde_json.workspace = true
tower-lsp.workspace = true
tracing.workspace = true
lsp-types.workspace = true


[dependencies.web-sys]
version = "0.3.63"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
