
[package]
name = "lsp-web"

authors = ["Arthur Vercruysse <arthur.vercruysse@outlook.com>"]
edition = "2021"
version = "0.1.0"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lang-jsonld = { path = "../lang-jsonld" }
lang-turtle = { path = "../lang-turtle" }
lsp-bin     = { path = "../lsp-bin/" }
lsp-core    = { path = "../core/" }

console_error_panic_hook = "0.1.7"
js-sys                   = "0.3.63"
serde-wasm-bindgen       = "0.5.0"
tracing-wasm             = "0.2.1"
wasm-bindgen-futures     = "0.4.34"

futures.workspace    = true
lsp-types.workspace  = true
serde.workspace      = true
serde_json.workspace = true
tower-lsp.workspace  = true
tracing.workspace    = true

[dependencies.wasm-bindgen]
features = ["serde", "serde-serialize", "serde_json"]
version  = "0.2.86"


[dependencies.web-sys]
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
version = "0.3.63"
