[package]
name = "conformance-tests"

authors = ["Arthur Vercruysse <arthur.vercruysse@outlook.com>"]
edition = "2021"
version = "0.1.0"

[dependencies]
sophia_api.workspace   = true
sophia_iri.workspace   = true
sophia_turtle = "0.8.0"

lsp-types.workspace    = true
lang-turtle = { path = "../lang-turtle/" }

[build-dependencies]
sophia_api.workspace   = true
sophia_iri.workspace   = true
sophia_turtle = "0.8.0"
sophia_inmem = "0.8.0"

