[package]
name = "test-utils"

authors = ["Arthur Vercruysse <arthur.vercruysse@outlook.com>"]
edition = "2021"
version = "0.1.0"

[dependencies]
bevy_ecs.workspace     = true
chumsky.workspace      = true
enum-methods.workspace = true
futures.workspace      = true
lsp-types.workspace    = true
ropey.workspace        = true
serde_json.workspace   = true
sophia_api.workspace   = true
tower-lsp.workspace    = true
tracing.workspace      = true

async-executor = "1.13.1"
async-std      = "1.13.0"

lsp-core = { path = "../core/" }

